WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228864
Crash at WebKit::WebPage::requestTextRecognition caused by accessibility invocation.
https://bugs.webkit.org/show_bug.cgi?id=228864
Summary
Crash at WebKit::WebPage::requestTextRecognition caused by accessibility invo...
Andres Gonzalez
Reported
2021-08-06 08:26:42 PDT
Crash at WebKit::WebPage::requestTextRecognition caused by accessibility invocation.
Attachments
Patch
(1.68 KB, patch)
2021-08-06 08:34 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2021-08-06 08:34:33 PDT
Created
attachment 435069
[details]
Patch
Andres Gonzalez
Comment 2
2021-08-06 08:42:29 PDT
<
rdar://80679512
>
Andres Gonzalez
Comment 3
2021-08-06 08:45:21 PDT
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebKit 0x190d4b764 WebKit::WebPage::requestTextRecognition(WebCore::Element&, WTF::CompletionHandler<void (WTF::RefPtr<WebCore::Element, WTF::RawPtrTraits<WebCore::Element>, WTF::DefaultRefDerefTraits<WebCore::Element> >&&)>&&) + 40 (/Library/Caches/com.apple.xbs/Sources/WebKit/WebKit-7612.1.22.0.3/Source/WebKit/WebProcess/WebPage/WebPage.cpp:7399) 1 WebCore 0x191e2b6fc WebCore::AXImage::imageOverlayElements() + 400 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebKit-7612.1.22.0.3/Source/WebCore/./accessibility/AXImage.cpp:70) 2 WebCore 0x191e2b6fc WebCore::AXImage::imageOverlayElements() + 400 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebKit-7612.1.22.0.3/Source/WebCore/./accessibility/AXImage.cpp:70) 3 WebCore 0x19121bc30 -[WebAccessibilityObjectWrapper accessibilityImageOverlayElements] + 124 (/Library/Caches/com.apple.xbs/Sources/WebCore/WebKit-7612.1.22.0.3/Source/WebCore/./accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:1886)
EWS
Comment 4
2021-08-06 09:52:52 PDT
Committed
r280727
(
240317@main
): <
https://commits.webkit.org/240317@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435069
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug