Crash at WebKit::WebPage::requestTextRecognition caused by accessibility invocation. https://bugs.webkit.org/show_bug.cgi?id=228864 rdar://80679512

Reviewed by Chris Fleizach.

* accessibility/AXImage.cpp:
(WebCore::AXImage::imageOverlayElements):
It was calling requestTextRecognition with *element(), but element() can
return nullptr, which would lead to the crash.


Canonical link: https://commits.webkit.org/240317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280727 268f45cc-cd09-0410-ab3c-d52691b4dbfc